--- a/index.html
+++ b/index.html
@@ -36,30 +36,142 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a id="my-work-from-freecodecamp" class="anchor" href="#my-work-from-freecodecamp" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Work From FreeCodeCamp</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
+<p>This is a collection of the code I have written myself or during pair programming. 
+It will help me keep a clean record, and also as practice for working with GitHub.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p><strong>Rafael Rodriguez</strong>
+<br>
+My E-mail: <a href="mailto:rafase282@gmail.com">rafase282@gmail.com</a>
+<br>
+FreeCodeCamp Profile: <a href="http://www.freecodecamp.com/rafase282">http://www.freecodecamp.com/rafase282</a>
+<br>
+Blog/site: <a href="https://rafase282.wordpress.com/">https://rafase282.wordpress.com/</a></p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="basic-algorithm-scripting-" class="anchor" href="#basic-algorithm-scripting-" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Basic Algorithm Scripting </strong>
+</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Waypoint: Pair Program on Bonfires It was jsut information.</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/02%20Bonfire%20Meet%20Bonfire.js">Meet Bonfire It</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/03%20Bonfire%20Reverse%20a%20String.js">Reverse a String</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/04%20Bonfire%20Factorialize%20a%20Number.js">Factorialize a Number</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/05%20Bonfire%20Check%20for%20Palindromes.js">Check for Palindromes</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/06%20Bonfire%20Find%20the%20Longest%20Word%20in%20a%20String.js">Find the Longest Word in a String</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/07%20Bonfire%20Title%20Case%20a%20Sentence.js">Title Case a Sentence</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/08%20Bonfire%20Return%20Largest%20Numbers%20in%20Arrays.js">Return Largest Numbers in Arrays</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/09%20Bonfire%20Confirm%20the%20Ending.js">Confirm the Ending</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/10%20Bonfire%20Repeat%20a%20string%20repeat%20a%20string.js">Repeat a string repeat a string</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/11%20Bonfire%20Truncate%20a%20string.js">Truncate a string</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/12%20Bonfire%20Chunky%20Monkey.js">Chunky Monkey</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/13%20Bonfire%20Slasher%20Flick.js">Slasher Flick</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/14%20Bonfire%20Mutations.js">Mutations</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/15%20Bonfire%20Falsey%20Bouncer.js">Falsey Bouncer</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/16%20Bonfire%20Where%20art%20thou.js">Where art thou?</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/17%20Bonfire%20Seek%20and%20Destroy.js">Seek and Destroy</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/18%20Bonfire%20Where%20do%20I%20belong.js">Where do I belong</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/19%20Bonfire%20Sum%20All%20Numbers%20in%20a%20Range.js">Sum All Numbers in a Range</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/20%20Bonfire%20Diff%20Two%20Arrays.js">Diff Two Arrays</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/21%20Bonfire%20Roman%20Numeral%20Converter.js">Roman Numeral Converter</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/22%20Bonfire%20Search%20and%20Replace.js">Search and Replace</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/23%20Bornfire%20Pig%20Latin.js">Pig Latin</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/24%20Bonfire%20DNA%20Pairing.js">DNA Pairing</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/25%20Bonfire%20Missing%20letters.js">Missing letters</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/26%20Bonfire%20Boo%20who.js">Boo who</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/27%20Bonfire%20Sorted%20Union.js">Sorted Union</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/28%20Bonfire%20Convert%20HTML%20Entities.js">Convert HTML Entities</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/29%20Bonfire%20Spinal%20Tap%20Case.js">Spinal Tap Case</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/30%20Bonfire%20Sum%20All%20Odd%20Fibonacci%20Numbers.js">Sum All Odd Fibonacci Numbers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/31%20Bonfire%20Sum%20All%20Primes.js">Sum All Primes</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/32%20Bonfire%20Smallest%20Common%20Multiple.js">Smallest Common Multiple</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/33%20Bonfire%20Finders%20Keepers.js">Finders Keepers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/34%20Bonfire%20Drop%20it.js">Drop it</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/35%20Bonfire%20Steamroller.js">Steamroller</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/36%20Bonfire%20Binary%20Agents.js">Binary Agents</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/37%20Bonfire%20Everything%20Be%20True.js">Everything Be True</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/38%20Bonfire%20Arguments%20Optional.js">Arguments Optional</a>
+</li>
+</ul>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="object-oriented-javascript" class="anchor" href="#object-oriented-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Object Oriented JavaScript</strong>
+</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>Waypoint: [Scope Your Variables]</li>
+<li>Waypoint: [Reference your Current Object with This]</li>
+<li>Waypoint: [Traverse the Prototype Chain]</li>
+<li>Waypoint: [Reuse Code with Decorators]</li>
+<li>Waypoint: [Build Objects with Functional Classes]</li>
+<li>Waypoint: [Build Objects with Prototypal Classes]</li>
+<li>Waypoint: [Understand Pseudoclassical Patterns]</li>
+<li>Waypoint: [Subclass one Object to Another]</li>
+<li>Waypoint: [Use Pseudoclassical Subclasses]</li>
+</ul>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h2>
+<a id="intermediate-algorithm-scripting" class="anchor" href="#intermediate-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Intermediate Algorithm Scripting</strong>
+</h2>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Bonfire: [Make a Person]</li>
+<li>Bonfire: [Map the Debris]</li>
+<li>Bonfire: [Pairwise]</li>
+</ul>
+
+<h2>
+<a id="bonfire-validate-us-telephone-numbers" class="anchor" href="#bonfire-validate-us-telephone-numbers" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Bonfire: Validate US Telephone Numbers</strong>
+</h2>
+
+<ul>
+<li>Bonfire: [Symmetric Difference]</li>
+<li>Bonfire: [Exact Change]</li>
+<li>Bonfire: [Inventory Update]</li>
+<li>Bonfire: [No repeats please]</li>
+<li>Bonfire: [Friendly Date Ranges]</li>
+</ul>
         </article>
       </div>
     </div>
