Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,13 +45,20 @@ It will help me keep a clean record, and also as practice for working with GitHu
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h2>
 
-<p><strong>Rafael Rodriguez</strong>
-<br>
-My E-mail: <a href="mailto:rafase282@gmail.com">rafase282@gmail.com</a>
-<br>
-FreeCodeCamp Profile: <a href="http://www.freecodecamp.com/rafase282">http://www.freecodecamp.com/rafase282</a>
-<br>
-Blog/site: <a href="https://rafase282.wordpress.com/">https://rafase282.wordpress.com/</a></p>
+<p><strong>Rafael Rodriguez</strong></p>
+
+<ul>
+<li>My E-mail: <a href="mailto:rafase282@gmail.com">rafase282@gmail.com</a>
+</li>
+<li>FreeCodeCamp Profile: <a href="http://www.freecodecamp.com/rafase282">http://www.freecodecamp.com/rafase282</a>
+</li>
+<li>CodePed Profile: <a href="http://codepen.io/Rafase282/">http://codepen.io/Rafase282/</a>
+</li>
+<li>Blog/site: <a href="https://rafase282.wordpress.com/">https://rafase282.wordpress.com/</a>
+</li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/rafase282">https://www.linkedin.com/in/rafase282</a>
+</li>
+</ul>
 
 <h2>
 <a id="basic-algorithm-scripting-" class="anchor" href="#basic-algorithm-scripting-" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Basic Algorithm Scripting </strong>
