Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>My-freecodecamp-code by Rafase282</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>My-freecodecamp-code</title>
-  <meta name="description" content="My code from the bootcamp.">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">My-freecodecamp-code</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">My code from the bootcamp.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My-freecodecamp-code on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>My-freecodecamp-code</h1>
+        <p>My code from the bootcamp.</p>
+        <p class="view"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View the Project on GitHub <small>Rafase282/My-FreeCodeCamp-Code</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
 <a id="my-work-from-freecodecamp" class="anchor" href="#my-work-from-freecodecamp" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Work From FreeCodeCamp</h1>
 
 <p>This is a collection of the code I have written myself or during pair programming. 
@@ -163,43 +154,33 @@ It will help me keep a clean record, and also as practice for working with GitHu
 </h2>
 
 <ul>
-<li>Bonfire: [Make a Person]</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Intermediate%20Algorithm%20Scripting/1%20Bonfire%20Make%20a%20Person.js">Make a Person</a>
+</li>
 <li>Bonfire: [Map the Debris]</li>
 <li>Bonfire: [Pairwise]</li>
 </ul>
 
 <h2>
-<a id="bonfire-validate-us-telephone-numbers" class="anchor" href="#bonfire-validate-us-telephone-numbers" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Bonfire: Validate US Telephone Numbers</strong>
+<a id="advanced-algorithm-scripting" class="anchor" href="#advanced-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Advanced Algorithm Scripting</strong>
 </h2>
 
 <ul>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Advanced%20Algorithm%20Scripting/1%20Bonfire%20Validate%20US%20Telephone%20Numbers.js">Validate US Telephone Numbers</a>
+</li>
 <li>Bonfire: [Symmetric Difference]</li>
 <li>Bonfire: [Exact Change]</li>
 <li>Bonfire: [Inventory Update]</li>
 <li>Bonfire: [No repeats please]</li>
 <li>Bonfire: [Friendly Date Ranges]</li>
 </ul>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My-freecodecamp-code</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Project maintained by <a href="https://github.com/Rafase282">Rafase282</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -210,5 +191,5 @@ It will help me keep a clean record, and also as practice for working with GitHu
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
