Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>My-freecodecamp-code by Rafase282</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <header>
-      <div class="container">
-        <h1>My-freecodecamp-code</h1>
-        <h2>My code from the bootcamp.</h2>
+    <div class="wrapper">
 
-        <section id="downloads">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+      <section>
+        <div id="title">
+          <h1>My-freecodecamp-code</h1>
+          <p>My code from the bootcamp.</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Rafase282">Rafase282</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-    <div class="container">
-      <section id="main_content">
         <h1>
 <a id="my-work-from-freecodecamp" class="anchor" href="#my-work-from-freecodecamp" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Work From FreeCodeCamp</h1>
 
 <p>This is a collection of the code I have written myself or during pair programming. 
 It will help me keep a clean record, and also as practice for working with GitHub.
 You can also visit the Project wiki for more information.</p>
+
+<p>If you want to contribute then feel free to do so.</p>
 
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h2>
@@ -138,8 +150,9 @@ You can also visit the Project wiki for more information.</p>
 <li>Bonfire: [Friendly Date Ranges]</li>
 </ul>
       </section>
-    </div>
 
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
