--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>My-freecodecamp-code by Rafase282</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <header>
+      <div class="container">
+        <h1>My-freecodecamp-code</h1>
+        <h2>My code from the bootcamp.</h2>
 
-      <section>
-        <div id="title">
-          <h1>My-freecodecamp-code</h1>
-          <p>My code from the bootcamp.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/Rafase282">Rafase282</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <section id="downloads">
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="my-work-from-freecodecamp" class="anchor" href="#my-work-from-freecodecamp" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Work From FreeCodeCamp</h1>
 
@@ -71,43 +61,80 @@ You can also visit the Project wiki for more information.</p>
 
 <ul>
 <li>Waypoint: Pair Program on Bonfires It was jsut information.</li>
-<li>Bonfire: [Meet Bonfire It] </li>
-<li>Bonfire: [Reverse a String] </li>
-<li>Bonfire: [Factorialize a Number] </li>
-<li>Bonfire: [Check for Palindromes] </li>
-<li>Bonfire: [Find the Longest Word in a String] </li>
-<li>Bonfire: [Title Case a Sentence] </li>
-<li>Bonfire: [Return Largest Numbers in Arrays] </li>
-<li>Bonfire: [Confirm the Ending] </li>
-<li>Bonfire: [Repeat a string repeat a string] </li>
-<li>Bonfire: [Truncate a string] </li>
-<li>Bonfire: [Chunky Monkey] </li>
-<li>Bonfire: [Slasher Flick] </li>
-<li>Bonfire: [Mutations] </li>
-<li>Bonfire: [Falsey Bouncer] </li>
-<li>Bonfire: [Where art thou?] </li>
-<li>Bonfire: [Seek and Destroy] </li>
-<li>Bonfire: [Where do I belong] </li>
-<li>Bonfire: [Sum All Numbers in a Range] </li>
-<li>Bonfire: [Diff Two Arrays] </li>
-<li>Bonfire: [Roman Numeral Converter] </li>
-<li>Bonfire: [Search and Replace] </li>
-<li>Bonfire: [Pig Latin] </li>
-<li>Bonfire: [DNA Pairing] </li>
-<li>Bonfire: [Missing letters] </li>
-<li>Bonfire: [Boo who] </li>
-<li>Bonfire: [Sorted Union] </li>
-<li>Bonfire: [Convert HTML Entities] </li>
-<li>Bonfire: [Spinal Tap Case]</li>
-<li>Bonfire: [Sum All Odd Fibonacci Numbers] </li>
-<li>Bonfire: [Sum All Primes] </li>
-<li>Bonfire: [Smallest Common Multiple] </li>
-<li>Bonfire: [Finders Keepers] </li>
-<li>Bonfire: [Drop it] </li>
-<li>Bonfire: [Steamroller] </li>
-<li>Bonfire: [Binary Agents] </li>
-<li>Bonfire: [Everything Be True]</li>
-<li>Bonfire: [Arguments Optional] </li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/02%20Bonfire%20Meet%20Bonfire.js">Meet Bonfire It</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/03%20Bonfire%20Reverse%20a%20String.js">Reverse a String</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/04%20Bonfire%20Factorialize%20a%20Number.js">Factorialize a Number</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/05%20Bonfire%20Check%20for%20Palindromes.js">Check for Palindromes</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/06%20Bonfire%20Find%20the%20Longest%20Word%20in%20a%20String.js">Find the Longest Word in a String</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/07%20Bonfire%20Title%20Case%20a%20Sentence.js">Title Case a Sentence</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/08%20Bonfire%20Return%20Largest%20Numbers%20in%20Arrays.js">Return Largest Numbers in Arrays</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/09%20Bonfire%20Confirm%20the%20Ending.js">Confirm the Ending</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/10%20Bonfire%20Repeat%20a%20string%20repeat%20a%20string.js">Repeat a string repeat a string</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/11%20Bonfire%20Truncate%20a%20string.js">Truncate a string</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/12%20Bonfire%20Chunky%20Monkey.js">Chunky Monkey</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/13%20Bonfire%20Slasher%20Flick.js">Slasher Flick</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/14%20Bonfire%20Mutations.js">Mutations</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/15%20Bonfire%20Falsey%20Bouncer.js">Falsey Bouncer</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/16%20Bonfire%20Where%20art%20thou.js">Where art thou?</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/17%20Bonfire%20Seek%20and%20Destroy.js">Seek and Destroy</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/18%20Bonfire%20Where%20do%20I%20belong.js">Where do I belong</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/19%20Bonfire%20Sum%20All%20Numbers%20in%20a%20Range.js">Sum All Numbers in a Range</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/20%20Bonfire%20Diff%20Two%20Arrays.js">Diff Two Arrays</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/21%20Bonfire%20Roman%20Numeral%20Converter.js">Roman Numeral Converter</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/22%20Bonfire%20Search%20and%20Replace.js">Search and Replace</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/23%20Bornfire%20Pig%20Latin.js">Pig Latin</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/24%20Bonfire%20DNA%20Pairing.js">DNA Pairing</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/25%20Bonfire%20Missing%20letters.js">Missing letters</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/26%20Bonfire%20Boo%20who.js">Boo who</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/27%20Bonfire%20Sorted%20Union.js">Sorted Union</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/28%20Bonfire%20Convert%20HTML%20Entities.js">Convert HTML Entities</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/29%20Bonfire%20Spinal%20Tap%20Case.js">Spinal Tap Case</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/30%20Bonfire%20Sum%20All%20Odd%20Fibonacci%20Numbers.js">Sum All Odd Fibonacci Numbers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/31%20Bonfire%20Sum%20All%20Primes.js">Sum All Primes</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/32%20Bonfire%20Smallest%20Common%20Multiple.js">Smallest Common Multiple</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/33%20Bonfire%20Finders%20Keepers.js">Finders Keepers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/34%20Bonfire%20Drop%20it.js">Drop it</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/35%20Bonfire%20Steamroller.js">Steamroller</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/36%20Bonfire%20Binary%20Agents.js">Binary Agents</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/37%20Bonfire%20Everything%20Be%20True.js">Everything Be True</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/blob/master/Basic%20Algorithm%20Scripting/38%20Bonfire%20Arguments%20Optional.js">Arguments Optional</a>
+</li>
 </ul>
 
 <h2>
@@ -150,9 +177,8 @@ You can also visit the Project wiki for more information.</p>
 <li>Bonfire: [Friendly Date Ranges]</li>
 </ul>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
