Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
 <li>Bonfire: [Smallest Common Multiple] </li>
 <li>Bonfire: [Finders Keepers] </li>
 <li>Bonfire: [Drop it] </li>
-<li>Bonfire: [Steamroller] </li>
-<li>Bonfire: [Binary Agents] </li>
-<li>Bonfire: [Everything Be True]</li>
-<li>Bonfire: [Arguments Optional] </li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Steamroller">Steamroller</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Binary-Agents">Binary Agents</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Everything-Be-True">Everything Be True</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Arguments-Optional">Arguments Optional</a>
+</li>
 </ul>
 
 <h2>
@@ -103,16 +107,24 @@
 </h2>
 
 <ul>
-<li>Waypoint: [Scope Your Variables]</li>
-<li>Waypoint: [Reference your Current Object with This]</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Scope-Your-Variables">Scope Your Variables</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Reference-your-Current-Object-with-This">Reference your Current Object with This</a>
+</li>
 <li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Traverse-the-Prototype-Chain">Traverse the Prototype Chain</a>
 </li>
-<li>Waypoint: [Reuse Code with Decorators]</li>
-<li>Waypoint: [Build Objects with Functional Classes]</li>
-<li>Waypoint: [Build Objects with Prototypal Classes]</li>
-<li>Waypoint: [Understand Pseudoclassical Patterns]</li>
-<li>Waypoint: [Subclass one Object to Another]</li>
-<li>Waypoint: [Use Pseudoclassical Subclasses]</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Reuse-Code-with-Decorators">Reuse Code with Decorators</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Objects-with-Functional-Classes">Build Objects with Functional Classes</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Build-Objects-with-Prototypal-Classes">Build Objects with Prototypal Classes</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Understand-Pseudoclassical-Patterns">Understand Pseudoclassical Patterns</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Subclass-one-Object-to-Another">Subclass one Object to Another</a>
+</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Pseudoclassical-Subclasses">Use Pseudoclassical Subclasses</a>
+</li>
 </ul>
 
 <h2>
@@ -122,8 +134,10 @@
 <ul>
 <li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Make-a-Person">Make a Person</a>
 </li>
-<li>Bonfire: [Map the Debris]</li>
-<li>Bonfire: [Pairwise]</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Map-the-Debris">Map the Debris</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Pairwise">Pairwise</a>
+</li>
 </ul>
 
 <h2>
