Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <title>My-freecodecamp-code by Rafase282</title>
-  </head>
+  <title>My-freecodecamp-code</title>
+  <meta name="description" content="My code from the bootcamp.">
 
-  <body>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
+</head>
+
+<body>
+
+  <div class="wrapper">
     <header>
-      <div class="container">
-        <h1>My-freecodecamp-code</h1>
-        <h2>My code from the bootcamp.</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
+      <h1 class="title">My-freecodecamp-code</h1>
     </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h1>
+    <div id="container">
+      <p class="tagline">My code from the bootcamp.</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My-freecodecamp-code on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 
 <p>This repository is not for an app but more as a journal where I keep a record of everything I have done and learned from FreeCodeCamp. I decided to use a wiki as I can put more information easily on it. You will find my code there and also on the right directories if you just want to see the code. </p>
 
-<p>I will try to keep everything updated. If you are also part of the camp or would like to contribute in any way then feel free to contact me. The purpose of this is for reference and learning material overall, for everyone as it is public.</p>
+<p>I will try to keep everything updated. If you are also part of the camp or would like to <strong>contribute</strong> in any way then feel free to contact me. The purpose of this is for reference and learning material overall, for everyone as it is public.</p>
 
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h2>
@@ -152,10 +160,27 @@
 <li>Bonfire: [No repeats please]</li>
 <li>Bonfire: [Friendly Date Ranges]</li>
 </ul>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My-freecodecamp-code</a></p>
 
-              <script type="text/javascript">
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+            <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -166,5 +191,5 @@
             } catch(err) {}
           </script>
 
-  </body>
+</body>
 </html>
