Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,65 +1,52 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>My-freecodecamp-code by Rafase282</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>My-freecodecamp-code</title>
-  <meta name="description" content="My code from the bootcamp.">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">My-freecodecamp-code</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">My code from the bootcamp.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My-freecodecamp-code on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>My-freecodecamp-code</h1>
+        <p>My code from the bootcamp.</p>
+        <p class="view"><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View the Project on GitHub <small>Rafase282/My-FreeCodeCamp-Code</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 
 <p>This repository is not for an app but more as a journal where I keep a record of everything I have done and learned from FreeCodeCamp. I decided to use a wiki as I can put more information easily on it. You will find my code there and also on the right directories if you just want to see the code. </p>
 
-<p>I will try to keep everything updated. If you are also part of the camp or would like to <strong>contribute</strong> in any way then feel free to contact me. The purpose of this is for reference and learning material overall, for everyone as it is public.</p>
+<p>I will try to keep everything updated. If you are also part of the camp or would like to contribute in any way then feel free to contact me. The purpose of this is for reference and learning material overall, for everyone as it is public.</p>
 
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h2>
 
 <p><strong>Rafael Rodriguez</strong></p>
 
-<ul>
-<li>My E-mail: <a href="mailto:rafase282@gmail.com">rafase282@gmail.com</a>
-</li>
-<li>FreeCodeCamp Profile: <a href="http://www.freecodecamp.com/rafase282">http://www.freecodecamp.com/rafase282</a>
-</li>
-<li>CodePed Profile: <a href="http://codepen.io/Rafase282/">http://codepen.io/Rafase282/</a>
-</li>
-<li>Blog/site: <a href="https://rafase282.wordpress.com/">https://rafase282.wordpress.com/</a>
-</li>
-<li>LinkedIn: <a href="https://www.linkedin.com/in/rafase282">https://www.linkedin.com/in/rafase282</a>
-</li>
-</ul>
+<p><img src="https://avatars0.githubusercontent.com/Rafase282?&amp;s=128" alt="@Rafase282"></p>
+
+<p><a href="https://github.com/Rafase282">Github</a> |
+<a href="http://www.freecodecamp.com/rafase282">FreeCodeCamp</a> | 
+<a href="http://codepen.io/Rafase282/">CodePen</a> |
+<a href="https://www.linkedin.com/in/rafase282">LinkedIn</a> |
+<a href="https://rafase282.wordpress.com/">Blog/Site</a> |
+<a href="mailto:rafase282@gmail.com">E-Mail</a></p>
 
 <h2>
 <a id="basic-html5-and-css" class="anchor" href="#basic-html5-and-css" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic HTML5 and CSS</h2>
@@ -255,7 +242,8 @@
 <a id="functional-programming" class="anchor" href="#functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Functional Programming</h2>
 
 <ul>
-<li>Waypoint: Practice Functional Programming</li>
+<li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Practice-Functional-Programming">Practice Functional Programming</a>
+</li>
 </ul>
 
 <h2>
@@ -313,27 +301,14 @@
 <li>Basejump: Manage a Book Trading Club</li>
 <li>Basejump: Build a Pinterest Clone</li>
 </ul>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My-freecodecamp-code</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Project maintained by <a href="https://github.com/Rafase282">Rafase282</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -344,5 +319,5 @@
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
